# auv

./: .gitignore  LICENSE  README.md  action.yml  auv.py  build-all.sh  pyproject.toml  sync.sh
.github/workflows/: build.yml  image.yml  test.yml
docker/: Dockerfile
patches/: 64gram-desktop-host-tools.patch  64gram-desktop.sh  alhp-keyring.sh  byobu.patch
profiles/alderlake/: makepkg.conf  packages.txt
profiles/generic/: makepkg.conf  packages.txt
profiles/tremont/: makepkg.conf  packages.txt
profiles/znver5/: makepkg.conf  packages.txt
scripts/: build-in-container.py  build-in-container.sh  build.py  build.sh  clean-release-assets.sh  download-release-assets.sh  fetch-assets.sh  repo-list  sync-assets.sh  sync-release-assets.sh
