[project]
name = "auv"
version = "0.1.0"
authors = [{ name = "karin0", email = "karin0@gmx.com" }]
requires-python = ">=3.14"
dependencies = ["pyalpm>=0.10.12"]

[dependency-groups]
dev = ["ruff>=0.15.12", "pyright>=1.1.409"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A",
    "ANN",
    "ARG",
    "D",
    "EM",
    "ERA",
    "FAST",
    "FBT",
    "PTH",
    "PLR",
    "COM812",

    "T201",
    "S603",
    "S607",
    "INP001",

    "BLE001",
    "DTZ005",
    "DTZ006",
    "PLW0603",
    "PLW2901",

    "S101",
    "C901",
]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = 'single'
inline-quotes = 'single'
multiline-quotes = 'single'

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"
